# scarce

./: Cargo.toml  README.md  shell.nix
doc/: design.md
nix/: sources.json
src/: main.rs
